--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "devDependencies": {
-    "@webgpu/types": "^0.1.40",
     "typescript": "^5.3.3"
   },
   "name": "particle_effects",
@@ -11,6 +10,7 @@
   "scripts": {
     "serve": "yarn workspace web serve",
     "build": "yarn workspace web build",
+    "compile": "yarn workspace web compile",
     "lint": "npx eslint \".\\packages\\web\\src\\*.ts\" --fix"
   },
   "repository": "git+https://github.com/pranitsh/jabberwocky.git",
