--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "serve": "webpack-dev-server --config .\\webpack.config.js --mode development",
     "build": "yarn workspace web webpack --mode production -o ../../build",
+    "compile": "yarn workspace web webpack --mode none -o ../../compile",
     "lint": "npx eslint /src/*"
   },
   "devDependencies": {
@@ -17,15 +18,13 @@
     "@webgpu/types": "^0.1.40",
     "css-loader": "^6.10.0",
     "eslint": "^8.0.1",
-    "eslint-config-love": "^43.1.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "html-webpack-plugin": "^5.6.0",
-    "raw-loader": "^4.0.2",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
-    "typescript": "*",
+    "typescript": "^5.3.3",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
