--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 build/
 compile/
+env/
 
 # Created by https://www.toptal.com/developers/gitignore/api/yarn,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=yarn,node
