--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "license": "SEE LICENSE IN <LICENSE.txt>",
   "scripts": {
-    "serve": "webpack-dev-server --config .\\webpack.config.js --mode development",
+    "serve": "webpack-dev-server --config webpack.config.js --mode development",
     "build": "yarn workspace web webpack --mode production -o ../../build",
     "compile": "yarn workspace web webpack --mode none -o ../../compile",
     "lint": "npx eslint /src/*"
